--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -6,11 +6,11 @@ Neos:
 Sitegeist:
   CriQuel:
     operations:
-      add: 'Sitegeist\CriQuel\Operations\AddOperation'
-      remove: 'Sitegeist\CriQuel\Operations\RemoveOperation'
-      unique: 'Sitegeist\CriQuel\Operations\UniqueOperation'
-      children: 'Sitegeist\CriQuel\Operations\ChildrenOperation'
-      ancestors: 'Sitegeist\CriQuel\Operations\AncestorsOperation'
-      descendants: 'Sitegeist\CriQuel\Operations\DescendantsOperation'
-      withAncestors: 'Sitegeist\CriQuel\Operations\WithAncestorsOperation'
-      withDescendants: 'Sitegeist\CriQuel\Operations\WithDescendantsOperation'
+      add: 'Sitegeist\CriQuel\Operations\Add'
+      remove: 'Sitegeist\CriQuel\Operations\Remove'
+      unique: 'Sitegeist\CriQuel\Operations\Unique'
+      children: 'Sitegeist\CriQuel\Operations\Children'
+      ancestors: 'Sitegeist\CriQuel\Operations\Ancestors'
+      descendants: 'Sitegeist\CriQuel\Operations\Descendants'
+      withAncestors: 'Sitegeist\CriQuel\Operations\WithAncestors'
+      withDescendants: 'Sitegeist\CriQuel\Operations\WithDescendants'
