--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require-dev": {
         "neos/neos-development-collection": "9.0.x-dev",
         "phpstan/phpstan": "~1.10.16",
-        "squizlabs/php_codesniffer": "~3.7.2"
+        "squizlabs/php_codesniffer": "~3.7.2",
+        "phpunit/phpunit": "~10.3.0"
     },
     "autoload": {
         "psr-4": {
@@ -24,8 +25,9 @@
     "scripts": {
         "test:lint-fix": ["phpcbf --standard=PSR12 -n Classes"],
         "test:lint": ["phpcs --standard=PSR12 -n Classes"],
-        "test:stan": ["vendor/bin/phpstan analyse Classes"],
-        "test": ["composer install", "composer  test:lint", "composer  test:stan"]
+        "test:stan": ["phpstan analyse Classes"],
+        "test:unit": ["phpunit Tests/Unit"],
+        "test": ["composer install", "composer  test:lint", "composer  test:stan",  "composer  test:unit"]
     },
     "config": {
         "allow-plugins": {
