--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -7,26 +7,28 @@ Sitegeist:
   CriQuel:
     operations:
       # chainable Processor operations
-      first: 'Sitegeist\CriQuel\Processor\First'
-      last: 'Sitegeist\CriQuel\Processor\Last'
-      add: 'Sitegeist\CriQuel\Processor\Add'
-      remove: 'Sitegeist\CriQuel\Processor\Remove'
-      unique: 'Sitegeist\CriQuel\Processor\Unique'
-      children: 'Sitegeist\CriQuel\Processor\Children'
-      tethered: 'Sitegeist\CriQuel\Processor\Tethered'
-      filter: 'Sitegeist\CriQuel\Processor\Filter'
-      ancestors: 'Sitegeist\CriQuel\Processor\Ancestors'
-      descendants: 'Sitegeist\CriQuel\Processor\Descendants'
-      withAncestors: 'Sitegeist\CriQuel\Processor\WithAncestors'
-      withDescendants: 'Sitegeist\CriQuel\Processor\WithDescendants'
-      referencingNodes:  'Sitegeist\CriQuel\Processor\ReferencingNodes'
-      referencedByNodes:  'Sitegeist\CriQuel\Processor\ReferencedByNodes'
+      first: 'Sitegeist\CriQuel\Processor\FirstProcessor'
+      last: 'Sitegeist\CriQuel\Processor\LastProcessor'
+      add: 'Sitegeist\CriQuel\Processor\AddProcessor'
+      remove: 'Sitegeist\CriQuel\Processor\RemoveProcessor'
+      unique: 'Sitegeist\CriQuel\Processor\UniqueProcessor'
+      children: 'Sitegeist\CriQuel\Processor\ChildrenProcessor'
+      closest: 'Sitegeist\CriQuel\Processor\ClosestProcessor'
+      tethered: 'Sitegeist\CriQuel\Processor\TetheredProcessor'
+      filter: 'Sitegeist\CriQuel\Processor\FilterProcessor'
+      parent: 'Sitegeist\CriQuel\Processor\ParentProcessor'
+      ancestors: 'Sitegeist\CriQuel\Processor\AncestorsProcessor'
+      descendants: 'Sitegeist\CriQuel\Processor\DescendantsProcessor'
+      withAncestors: 'Sitegeist\CriQuel\Processor\WithAncestorsProcessor'
+      withDescendants: 'Sitegeist\CriQuel\Processor\WithDescendantsProcessor'
+      referencingNodes:  'Sitegeist\CriQuel\Processor\ReferencingNodesProcessor'
+      referencedByNodes:  'Sitegeist\CriQuel\Processor\ReferencedByNodesProcessor'
 
       # final Extractor operations
-      getNodes: 'Sitegeist\CriQuel\Extractor\GetNodes'
-      getNode: 'Sitegeist\CriQuel\Extractor\GetNode'
-      getReferences: 'Sitegeist\CriQuel\Extractor\GetReferences'
-      getReference: 'Sitegeist\CriQuel\Extractor\GetReference'
-      getProperties: 'Sitegeist\CriQuel\Extractor\GetProperties'
-      getProperty: 'Sitegeist\CriQuel\Extractor\GetProperty'
-      getCount: 'Sitegeist\CriQuel\Extractor\GetCount'
+      getNodes: 'Sitegeist\CriQuel\Extractor\GetNodesExtractor'
+      getNode: 'Sitegeist\CriQuel\Extractor\GetNodeExtractor'
+      getReferences: 'Sitegeist\CriQuel\Extractor\GetReferencesExtractor'
+      getReference: 'Sitegeist\CriQuel\Extractor\GetReferenceExtractor'
+      getProperties: 'Sitegeist\CriQuel\Extractor\GetPropertiesExtractor'
+      getProperty: 'Sitegeist\CriQuel\Extractor\GetPropertyExtractor'
+      getCount: 'Sitegeist\CriQuel\Extractor\GetCountExtractor'
