--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/extension-installer": "^1.3",
         "squizlabs/php_codesniffer": "~3.7.2",
-        "phpunit/phpunit": "~10.3.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
